--- a/style.css
+++ b/style.css
@@ -11,94 +11,87 @@ html{
 body{
     font-family: 'Roboto', sans-serif;
     font-size: 1.6rem;
-    background-image: linear-gradient(to right, #f6d365 0%, #fda085 100%);
-}
-.container{
+    background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);
+    height: 100vh;
     display: grid;
     place-items: center;
-    height: 100vh;
 }
-.btn:link,
-.btn:visited{
-    text-decoration: none;
-    color: #000;
-    background-color: #fff;
-    padding: 1.2rem 2.4rem;
-    font-size: 1.6rem;
-    border-radius: 10rem;
-    cursor: pointer;
 
+.btn{
+    border: none;
+    font-size: 1.8rem;
+    padding:1.2rem 2.4rem;
+    border-radius: 2.2rem;
+    box-shadow: 0.75rem 0.75rem 0 0 rgba(0,0,0,0.2);
     transition: all 0.3s ease-in-out;
-    position: relative;
-}
-.btn:hover{
-    transform: translateY(-0.5rem);
-    box-shadow: 0 0.5rem 2rem rgba(0, 0,0,0.2);
+    
+
 }
 .btn:active{
-    transform: translateY(0);
-    box-shadow: 0 0.1rem 0.5rem rgba(0, 0,0,0.2);
+    box-shadow: 0.35rem 0.35rem 0 0 rgba(0,0,0,0.2);
 }
-.btn::after{
-    content: "";
+.btn-animate{
+    animation: popUP 0.2s ease-out;
+}
+.modal{
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    border-radius: 10rem;
+    width: 40rem;
+    height: 40rem;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
     background-color: #fff;
-    z-index: -1;
-    transition: all 0.3s ease-out;
-}
-.btn:active::after{
-    transform: scale(3);
-    opacity: 0;
-}
-.popup{
-    position: absolute;
-    background-color: #fff;
+    display: grid;
+    place-items: center;
+    padding:4rem;
     text-align: justify;
-    width: 50%;
-    padding: 6rem 6rem;
-    border-radius: 1.4rem;
-    box-shadow: 0 0.2rem 2rem rgba(0, 0, 0, 0.194);
-    z-index: 20;
+    border-radius: 1.2rem;
+    box-shadow: 1rem 1rem 10rem 5rem rgba(0,0,0, 0.2);
 }
 .cross{
     position: absolute;
-    /* background-color: red; */
-    right: 1.4rem;
-    top: 1.4rem;
-    font-size: 2.8rem;
-    color: #777;
-    cursor: pointer;
-
+    top: -1.5rem;
+    right: -1.5rem;
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 0.265);
+    padding: 0.5rem 1rem;
+    backdrop-filter: blur(10rem);
 }
-.hidden{
-    display: none;
+.cross:hover{
+    cursor: pointer;
 }
 .overlay{
-    position:absolute;
-    top: 0;
-    left:0;
+    position: absolute;
     width: 100vw;
     height: 100vh;
-    background-color:rgba(0, 0, 0, 0.294);
-    filter: blur(10rem);
+    background-color: rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(0.5rem);
+    
+
 }
-.text-input{
-    text-align: center;
+.hide{
+    /* visibility: hidden; */
+    display: none;
 }
 
 
-.name{
-    border-radius: 10rem;
-    box-shadow: 0 0.35rem 5rem rgba(0, 0,0,0.2);
-    padding:  0.5rem 0.75rem;
-    width: 20rem;
+@keyframes  popUP{
+    0%{
+        width: 20rem;
+        height: 20rem;
+        color: #ffff;
+    }
+    50%{
+        width: 30rem;
+        height: 30rem;
+        color: #ffff;
+    }
+    100%{
+        width: 40rem;
+        height: 40rem;
+        color: #ffff;
+    }
+    
 }
 
-.main{
-    margin-bottom: 2rem;
-}
+
